tests/fail/node-att1.dit
A {
    String value;
    String value;
}